--- a/menu.html
+++ b/menu.html
@@ -1,89 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="css\menu.css">
 
+    <title>Menu</title>
 </head>
+
 <body>
-    <header class="page-head">
-        <div class="rd-navbar-wrap rd-navbar-minimal">
-            <nav class="rd-navbar novi-background bg-cover" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
-                data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static"
-                data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static"
-                data-xxl-layout="rd-navbar-static" data-stick-up-clone="false" data-md-stick-up-offset="100px"
-                data-lg-stick-up-offset="100px">
-                <div class="shell shell-fluid">
-                    <div class="rd-navbar-inner">
-                        <div class="rd-navbar-panel"><button class="rd-navbar-toggle"
-                                data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button><a
-                                class="rd-navbar-brand brand" href="index.html">
-                                <div class="brand-logo">
-                                    <img class="brand-logo-dark" src="images/logo-280x60.png" alt="" width="280"
-                                        height="60">
-                                    <img class="brand-logo-light" src="images/logo-inverse-280x60.png" alt="" width="280"
-                                        height="60">
-                                </div>
-                            </a></div>
-                        <div class="rd-navbar-nav-wrap">
-                            <ul class="rd-navbar-nav">
-                                <li class="active rd-navbar--has-dropdown rd-navbar-submenu"><a href="index.html">Home</a>
-                                    <ul class="rd-navbar-dropdown">
-                                        <li><a href="index-2.html">Home Boxed Layout</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li class="rd-navbar--has-dropdown rd-navbar-submenu"><a href="menu-classic.html">Menu</a>
-                                    <ul class="rd-navbar-dropdown menu-img-wrap">
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-01.png"
-                                                    alt="" width="88" height="60"><span>Pizzas</span></a></li>
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-02.png"
-                                                    alt="" width="88" height="60"><span>Burgers</span></a></li>
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-03.png"
-                                                    alt="" width="88" height="60"><span>Drinks</span></a></li>
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-04.png"
-                                                    alt="" width="88" height="60"><span>Toasts</span></a></li>
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-05.png"
-                                                    alt="" width="88" height="60"><span>Salads</span></a></li>
-                                        <li class="menu-img"><a href="menu-single.html"><img src="images/menu-food-06.png"
-                                                    alt="" width="88" height="60"><span>desserts</span></a></li>
-                                    </ul>
-                                </li>
-                                <li class="rd-navbar--has-dropdown rd-navbar-submenu"><a href="#">Pages</a>
-                                    <ul class="rd-navbar-dropdown">
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="deals.html">Deals</a></li>
-                                        <li><a href="menu-classic.html">Menu Classic</a></li>
-                                        <li><a href="privacy.html">Privacy Policy</a></li>
-                                    </ul>
-                                </li>
-                                <li class="rd-navbar--has-dropdown rd-navbar-submenu"><a href="#">News</a>
-                                    <ul class="rd-navbar-dropdown">
-                                        <li><a href="classic-blog.html">Classic Blog</a></li>
-                                        <li><a href="grid-blog.html">Grid Blog</a></li>
-                                        <li><a href="masonry-blog.html">Masonry Blog</a></li>
-                                        <li><a href="blog-post.html">Blog Post</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contacts.html">Contacts</a></li>
-                            </ul>
-                            <ul class="rd-navbar-shop list-inline">
-                                <li> <a class="unit unit-horizontal unit-middle unit-spacing-xxs link-default" href="tel:#">
-                                        <div class="unit-left"><span
-                                                class="novi-icon icon icon-md icon-primary thin-icon-phone-call text-middle"></span>
-                                        </div>
-                                        <div class="unit-body">
-                                            <address class="contact-info"><span class="text-bold big">+1 (409)
-                                                    987–5874</span></address>
-                                        </div>
-                                    </a></li>
-                            </ul>
-                        </div>
-                    </div>
+    <!--=============== HEADER ===============-->
+    <header class="header">
+        <nav class="nav container">
+            <div class="nav__data">
+                <a href="" class="nav__logo">
+                    <img src="imagenes\Logo_blanco.png" alt="revol-blanco">
+                </a>
+
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="ri-menu-line nav__burger"></i>
+                    <i class="ri-close-line nav__close"></i>
                 </div>
-            </nav>
-        </div>
+            </div>
+
+            <!--=============== NAV MENU ===============-->
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><a href="#" class="nav__link">Inicio</a></li>
+
+                    <!--=============== DROPDOWN 1 ===============-->
+                    <li class="dropdown__item">
+                        <div class="nav__link">
+                            Menu <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-pie-chart-line"></i> Tacos
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Especialidades
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> A la Parrilla 
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Mariscos
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Sandwich
+                                </a>
+                            </li>   
+                            <li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Ensaladas
+                                </a>
+                            </li><li>
+                                <a href="#" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Bebidas
+                                </a>
+                            </li>
+                             
+                            
+                        </ul>
+                    </li>
+
+                    <li><a href="#" class="nav__link">Sobre Nosotros</a></li>
+
+                    <li><a href="#" class="nav__link">Contacto</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="js\scriptmenu.js"></script>
 </body>
+
 </html>
