Intente meter el menu
algo pasa que se me corta y no se despliega todo

--- a/home.html
+++ b/home.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Revolucionarios</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css\home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <header>
+        <div class="menu-container">
+            <iframe class="header_principal" src="menu.html" frameborder="0"></iframe>
+        </div>
+
+    <!-- <header>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
@@ -17,7 +22,7 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <div class="swiper-container">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
