--- a/contacto.html
+++ b/contacto.html
@@ -30,10 +30,10 @@
     <div class="contenedor">
         <div class="medio-circulo">
           <img src="imagenes\hamburguesa.png" alt="Descripción de la imagen">
-          <h1>HORARIOS</h1><BR></BR>
-          <h1>De lunes a domingo de</h1>
+          <h1>Horarios</h1><BR></BR>
+          <h2>De lunes a domingo de</h2>
           <br>
-          <h1>1 PM a 9 PM</h1>
+          <strong><h3>1:00 pm a 9:00 pm</h3></strong>
       </div>
       
   </section>
