--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="background">
         <div class="login-container">
             <div class="login-header">
-                <img src="path/to/logo.png" alt="Logo Los Revolucionarios"> <!-- Ajusta la ruta al logo -->
+                <img src=imagenes\Logo_color.png" alt="Logo Los Revolucionarios"> <!-- Ajusta la ruta al logo -->
             </div>
             <div class="login-form">
                 <form>
@@ -18,7 +18,6 @@
                     <input type="password" placeholder="Contraseña" required>
                     <button type="submit">Entrar</button>
                 </form>
-                <p class="forgot-password">¿Olvidaste tu contraseña?</p>
             </div>
         </div>
     </div>
